Revert "Fixing gap at header"
This reverts commit 1823c0d6616c6d58ec97fd04b332a3f26e40f34d.

--- a/style.css
+++ b/style.css
@@ -118,5 +118,4 @@ navbar{
 img {
 	max-width: 100%;
 	height: auto;
-	margin-bottom:0px;
 }
